:sparkles:: sum cart, add product and coupon
