# src/routes/cartRoute.js
@@ -9,4 +9,15 @@ router.post('/', async (req, res) => cartController.create(req, res));
 router.put('/:id', async (req, res) => cartController.update(req, res));
 router.delete('/:id', async (req, res) => cartController.delete(req, res));
 
+router.get('/sumCart/:id', async (req, res) =>
+  cartController.sumCart(req, res)
+);
+router.patch('/addProduct/:id', async (req, res) =>
+  cartController.addProduct(req, res)
+);
+
+router.patch('/addDiscountCoupon/:id', async (req, res) =>
+  cartController.addDiscountCoupon(req, res)
+);
+
 module.exports = router;
